- added feat system - fixed some things - added feats and two stats +1 options to the asi choice - added systems like sorcery points